--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   z-index: 5;
-  margin: 0 auto; /* Устанавливаем отступы по горизонтали для выравнивания по центру */
+  margin: 0 auto; 
 }
 
 
