--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,10 @@
 
 .blue-circle {
   background-color: #04b68a;
-  width: 30px;
-  height: 30px;
+  width: 24px;
+  height: 24px;
   position: absolute; 
-  border-radius: 50%;
+  border-radius: 24px;
   z-index: 10;
 }
 
